tests: expand test coverage [skip ci]
